# logfmt-python

./: .gitignore  .travis.yml  Makefile  README.md  README.rst  requirements.txt  setup.cfg
logfmt/: __init__.py  formatter.py  parser.py
logfmt/tests/: test_parser.py
tests/: __init__.py  test_formatter.py  test_parser.py
