[metadata]
name = logfmt
version = 0.3
author = Timothee Peignier
author-email = timothee.peignier@tryphon.org
summary = Parse log lines in the logfmt style.
description-file = README.rst
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Topic :: Utilities

[files]
packages =
    logfmt
extra_files =
    README.rst
    LICENSE

[backwards_compat]
zip_safe = false

[wheel]
universal = 1

[test]
test-module = tests
